Fixed links overflowing on mobile.

--- a/app/javascript/css/public/pages/home.scss
+++ b/app/javascript/css/public/pages/home.scss
@@ -74,7 +74,8 @@
 
       .shortened-link-container, .original-link-container {
         font-size: 2.4rem;
-        white-space: pre;
+        white-space: pre-wrap;
+        word-break: break-all;
         animation: fadeIn .6s ease-in-out .4s backwards;
 
         p {
@@ -84,6 +85,7 @@
         a {
           color: $white;
           font-style: italic;
+          text-align: center;
 
           &:hover {
             color: $minty-green;
